kubevirt-gpol/add-services/.chainsaw-test/chainsaw-step-01-apply-1.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  labels:
    app.kubernetes.io/component: background-controller
    app.kubernetes.io/instance: kyverno
    app.kubernetes.io/part-of: kyverno
  name: kyverno:background-controller:kubevirt-services
rules:
- apiGroups:
  - ""
  resources:
  - services
  verbs:
  - create
  - update
  - delete
