kubevirt-gpol/add-services/.chainsaw-test/exception-service-sibling.yaml
apiVersion: v1
kind: Service
metadata:
  name: exception-vmi-sibling
  namespace: kubevirt-test-ns
