kubevirt-gpol/add-services/.chainsaw-test/exception-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: exception-vmi
  namespace: kubevirt-test-ns
