kubevirt-gpol/add-services/.chainsaw-test/exception-vmi-sibling.yaml
apiVersion: kubevirt.io/v1alpha3
kind: VirtualMachineInstance
metadata:
  name: exception-vmi-sibling
  namespace: kubevirt-test-ns
  labels:
    kubevirt.io/domain: exception-vmi-sibling
spec:
  domain:
    devices: {}
