kubevirt-gpol/add-services/.chainsaw-test/exception-wrong-namespace-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: exception-vmi
  namespace: kubevirt-other-ns
