kubevirt-gpol/add-services/.chainsaw-test/exception-wrong-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubevirt-other-ns
